@@ -1,6 +1,8 @@
 trunk
 =====
 * renamed global state from "currentState" to "globalState"
+* bug fix in mxRun() where a model with grandchildren submodels can
+  have its internal state corrupted
 
 Release 1.3.0-2168 (September 17, 2012)
 =======================================
